--- a/app/svelte3/package.json
+++ b/app/svelte3/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@storybook/svelte",
+  "name": "@storybook/svelte3",
   "version": "5.1.3",
-  "description": "Storybook for Svelte: Develop Svelte Component in isolation with Hot Reloading.",
+  "description": "Storybook for Svelte3: Develop Svelte Component in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
   ],
-  "homepage": "https://github.com/storybookjs/storybook/tree/master/app/svelte",
+  "homepage": "https://github.com/storybookjs/storybook/tree/master/app/svelte3",
   "bugs": {
     "url": "https://github.com/storybookjs/storybook/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/storybookjs/storybook.git",
-    "directory": "app/svelte"
+    "directory": "app/svelte3"
   },
   "license": "MIT",
   "main": "dist/client/index.js",
@@ -23,13 +23,17 @@
     "storybook-server": "./bin/index.js"
   },
   "scripts": {
-    "prepare": "node ../../scripts/prepare.js"
+    "prepare": "node ../../scripts/prepare.js",
+    "watch": "node ../../scripts/watch-babel.js"
   },
   "dependencies": {
     "@storybook/core": "5.1.3",
+    "@storybook/addon-centered": "5.1.3",
     "common-tags": "^1.8.0",
     "core-js": "^3.0.1",
+    "eslint-plugin-svelte3": "^1.2.3",
     "global": "^4.3.2",
+    "lodash": "^4.17.11",
     "regenerator-runtime": "^0.12.1"
   },
   "devDependencies": {
@@ -38,8 +42,8 @@
   },
   "peerDependencies": {
     "babel-loader": "^7.0.0 || ^8.0.0",
-    "svelte": "^3.1.0",
-    "svelte-loader": "^2.9.1"
+    "svelte": "^3.2",
+    "svelte-loader": "^2.13"
   },
   "engines": {
     "node": ">=8.0.0"
