--- a/examples/svelte3-kitchen-sink/package.json
+++ b/examples/svelte3-kitchen-sink/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-example",
+  "name": "svelte3-example",
   "version": "5.1.3",
   "private": true,
   "scripts": {
@@ -8,7 +8,8 @@
     "storybook": "start-storybook -p 9009 -s public"
   },
   "dependencies": {
-    "global": "^4.3.2"
+    "global": "^4.3.2",
+    "svelte": "^3.4.1"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "5.1.3",
@@ -23,6 +24,6 @@
     "@storybook/addon-storysource": "5.1.3",
     "@storybook/addon-viewport": "5.1.3",
     "@storybook/addons": "5.1.3",
-    "@storybook/svelte": "5.1.3"
+    "@storybook/svelte3": "5.1.3"
   }
 }
